sample/retrieveUnpackaged/objects/PortalSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>API_Hostname__c</fullName>
        <description>Used by the registration process</description>
        <label>API Hostname</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disable_Segmentation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Segmentation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiveChat_Button_Id__c</fullName>
        <label>LiveChat Button Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveChat_Deployment_Id__c</fullName>
        <label>LiveChat Deployment Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LiveChat_URL__c</fullName>
        <label>LiveChat URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portal_Contact_Phone__c</fullName>
        <description>SEW Call center #</description>
        <label>Portal Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Portal_Task_Default_User__c</fullName>
        <label>Portal Task Default User</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sandbox_Name__c</fullName>
        <description>Name of the sandbox</description>
        <label>Sandbox Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secure_Login_Url__c</fullName>
        <inlineHelpText>The secure login URL used for redirecting from a non-secure login page</inlineHelpText>
        <label>Secure Login Url</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>PortalSettings</label>
</CustomObject>